opacity attribute selector

--- a/Apr_dev/selectors.html
+++ b/Apr_dev/selectors.html
@@ -114,3 +114,9 @@ Style an element when it gets focus -->
     fbebfue3bf
     efefuefuo3efou3ouf ehfehfue hvuerhviu fhvruhvur ffhvurhfru rhruhu rhurhfur
 </p>
+
+<form>
+    <input type="text">
+    <input type="text">
+    <input type="button" value="Submit">
+</form>
