console test cases

--- a/js/thirdWay.html
+++ b/js/thirdWay.html
@@ -1,3 +1,6 @@
 <script src="thirdWay.js"></script>
+
 <h1>dkfhdjjdjd</h1>
 <button onclick="test()">click</button>
+<button onclick="testParametrisedFun(20,30)">click to ass para</button>
+<button onclick="parameterLessFun()">click</button>
